--- a/sdl-template-master/SDLTemplate/SDLTemplate/SDLTemplate.vcxproj
+++ b/sdl-template-master/SDLTemplate/SDLTemplate/SDLTemplate.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -37,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.h" />
+    <ClInclude Include="Boss.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="defs.h" />
